--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@import "react-phone-input-2/lib/style.css";
+
+
+
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 @keyframes zoomIn {
